<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="button_get">Get quotations</string>
    <string name="button_favourite">Favourite quotations</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About</string>

    <string name="activity_shake">Quotation shake</string>
    <string name="activity_random">Random quotations</string>
    <string name="activity_favourite">Favourite quotations</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_about">About</string>

    <string name="about_information">Quotation shake by \n\n David Alegria \n\n daalqui@inf.upv.es \n\n 2019</string>


    <string name="author_info">Author info</string>

    <string name="refresh">Hello %1s!\nPress  Refresh  to  get  a new  quotation</string>
    <string name="sample_quotation"> Sample quote %1d </string>
    <string name="sample_author">Sample author %1d</string>

    <string name="user"> Nameless One</string>

    <string name="English">English</string>
    <string name="Russian">Russian</string>

    <string name="delete_quotation"> Are you sure that you want to delete this quotation?</string>
    <string name="add">Add</string>
    <string name="menu_new">Refresh</string>
    <string name="delete_all">Clear All</string>
    <string name="delete_all_favourite"> Are you sure that you want to delete ALL your favourite quotations?</string>


    <!--- Strings asociados a los settings -->
    <string name="user_name_title" translatable="false"> User name</string>
    <string name="user_name_resume" translatable="false">Name that identifies the user</string>
    <string name="user_name_hint" translatable="false">Enter your user name</string>
    <string name="language_title" translatable="false">Quotation language</string>
    <string name="language_resume" translatable="false">Quotations will be received in the selected language</string>
    <string name="HTTP_method_title" translatable="false"> HTTP request method</string>
    <string name="HTTP_method_resume" translatable="false">Web requests will be performed using the selected HTTP method</string>
    <string name="GET" translatable="false">GET</string>
    <string name="POST" translatable="false">POST</string>
    <string name="database_access_title" translatable="false"> Database access method</string>
    <string name="database_access_resume" translatable="false">Database will be accessed following the selected method</string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <string name="Databases"> Databases</string>


</resources>
